solved 5 questions for 05

--- a/problems/05.ipynb
+++ b/problems/05.ipynb
@@ -37,6 +37,453 @@
     "- **All** of a student's test scores must be *100%* to pass.\n",
     "- Remember to return a list of student names *alphabetically*."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "46a08fe7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Hey', 'Ma', 'Zach']\n"
+     ]
+    }
+   ],
+   "source": [
+    "def who_passed1(students:dict):\n",
+    "    passed_students = []\n",
+    "    for student, marks  in students.items(): \n",
+    "        is_passed = True\n",
+    "        for mark in marks:\n",
+    "            is_equal = True\n",
+    "            splitted = mark.split(\"/\")\n",
+    "            if splitted[0] != splitted[1]:\n",
+    "                is_equal= False\n",
+    "            \n",
+    "            if(not is_equal):\n",
+    "                is_passed=False\n",
+    "        \n",
+    "        if(is_passed):\n",
+    "            passed_students.append(student)\n",
+    "    passed_students.sort() \n",
+    "    return  passed_students\n",
+    "\n",
+    "#cleaner version\n",
+    "def who_passed(students: dict) -> list:\n",
+    "    passed_students = []\n",
+    "\n",
+    "    for student, scores in students.items():\n",
+    "        if all(score.split(\"/\")[0] == score.split(\"/\")[1] for score in scores):\n",
+    "            passed_students.append(student)\n",
+    "\n",
+    "    return sorted(passed_students)\n",
+    "\n",
+    "        \n",
+    "print(who_passed({\"Zach\": [\"100/100\", \"2/2\"],\"Hey\": [\"10/10\", \"2/2\"],\"Ma\": [\"10/10\", \"2/2\"]}))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a4324d79",
+   "metadata": {},
+   "source": [
+    "## **2: Briscola! (Part I)**\n",
+    "\n",
+    "Briscola is an Italian card game, played with a deck of 40 cards that has four suits (hearts, diamonds, clubs, and spades), so that there are ten cards per suit: the Ace, the numbered cards from 2 up to 7, and the three face-cards (Jack, Queen, and King). In this challenge, the notation used for the cards is a string containing the card value (with the upper-case initial for face-cards) and the lower-case initial for suits, as in the examples below:\n",
+    "\n",
+    "```\n",
+    "Ah = Ace of Hearts\n",
+    "2s = Two of Spades\n",
+    "Jc = Jack of Clubs\n",
+    "Kd = King of Diamonds\n",
+    "```\n",
+    "\n",
+    "The total number of points available is **120**. When counting the points scored at the end of a game, the cards have the following values:\n",
+    "\n",
+    "- **Ace**: 11 points\n",
+    "- **Three**: 10 points\n",
+    "- **King**: 4 points\n",
+    "- **Queen**: 3 points\n",
+    "- **Jack**: 2 points\n",
+    "- Any other card has no value (0 points).\n",
+    "\n",
+    "Each game of Briscola is made of two rounds. After the first round, the points are counted for both you and your opponent, and these scores (plus 1) will set the target for winning the game, after that the second round is played.\n",
+    "\n",
+    "```\n",
+    "- First Round -\n",
+    "Player score: 80\n",
+    "Opponent score: 40\n",
+    "- Second Round -\n",
+    "Player wins scoring 41 points or more.\n",
+    "Opponent wins scoring 81 points or more.\n",
+    "```\n",
+    "\n",
+    "If after the second round the total points are equal for both you and your opponent, it's a tie.\n",
+    "\n",
+    "```\n",
+    "- First Round -\n",
+    "Player score: 80\n",
+    "Opponent score: 40\n",
+    "- Second Round -\n",
+    "Player score: 40\n",
+    "Opponent score: 80\n",
+    "\n",
+    "It's a tie! 120 points for both players.\n",
+    "```\n",
+    "\n",
+    "You are given two lists as parameters:\n",
+    "\n",
+    "- `my_deck1` contains your collected cards during the **first round**.\n",
+    "- `my_deck2` contains your collected cards during the **second round**.\n",
+    "\n",
+    "You have to implement a function that returns:\n",
+    "\n",
+    "- `\"You Win!\"` if in the second round you totalized a higher score than your opponent's score in the first round.\n",
+    "- `\"You Lose!\"` if in the second round you totalized a lower score than your opponent's score in the first round.\n",
+    "- `\"Draw!\"` if after the second round the total points are the same for both you and your opponent.\n",
+    "\n",
+    "### **Examples**\n",
+    "\n",
+    "```\n",
+    "briscola_score(\n",
+    "  [\"3c\", \"3s\", \"Qd\", \"Jh\", \"5d\", \"Jc\", \"6d\", \"Ad\", \"Js\", \"Qc\"],\n",
+    "  [\"Jd\", \"Kd\", \"4c\", \"6s\", \"Ks\", \"5c\", \"3d\", \"As\", \"Jh\", \"6h\"]\n",
+    ") ➞ \"You Lose!\"\n",
+    "\n",
+    "# You score 43 points in the first round.\n",
+    "# You need to score at least 78 points in the second round.\n",
+    "# You score 33 points in the second round.\n",
+    "\n",
+    "briscola_score(\n",
+    "  [\"Ac\", \"As\", \"3d\", \"3h\", \"3s\", \"Ah\", \"Kd\"],\n",
+    "  [\"3d\", \"Ad\", \"Ac\", \"As\", \"Ah\"]\n",
+    ") ➞ \"You Win!\"\n",
+    "\n",
+    "# You score 67 points in the first round.\n",
+    "# You need to score at least 54 points in the second round.\n",
+    "# You score 54 points in the second round.\n",
+    "\n",
+    "briscola_score(\n",
+    "  [\"Ac\", \"As\", \"3d\", \"3h\", \"3s\", \"Ah\", \"Kd\"],\n",
+    "  [\"3d\", \"Ad\", \"Ac\", \"As\", \"3h\"]\n",
+    ") ➞ \"Draw!\"\n",
+    "\n",
+    "# You score 67 points in the first round.\n",
+    "# You need to score at least 54 points in the second round.\n",
+    "# You score 53 points in the second round.\n",
+    "# Your total score is 120, and so is for your opponent.\n",
+    "```\n",
+    "\n",
+    "### **Notes**\n",
+    "\n",
+    "- You don't need to count the points scored by your opponent, because you know the maximum points available in a round (120).\n",
+    "- Despite suits are important during the game, they do not influence the score when counting points.\n",
+    "- The original standard suits and face-cards of an Italian deck are different from the international ones used for Poker. If you want to know more, take a look at the **Resources** tab."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "24c2f884",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You Lose!\n",
+      "You Win!\n",
+      "Draw!\n"
+     ]
+    }
+   ],
+   "source": [
+    "def briscola_score(my_deck1: list, my_deck2: list) -> str:\n",
+    "    rules = {\n",
+    "        \"A\": 11,\n",
+    "        \"3\": 10,\n",
+    "        \"K\": 4,\n",
+    "        \"Q\": 3,\n",
+    "        \"J\": 2\n",
+    "    }\n",
+    "\n",
+    "    def calculate_score(deck):\n",
+    "        return sum(rules.get(card[0].upper(), 0) for card in deck)\n",
+    "\n",
+    "    round1 = calculate_score(my_deck1)\n",
+    "    opponent_round1 = 120 - round1\n",
+    "    round2 = calculate_score(my_deck2)\n",
+    "\n",
+    "    if round2 > opponent_round1:\n",
+    "        return \"You Win!\"\n",
+    "    elif round2 < opponent_round1:\n",
+    "        if round1 + round2 == 120:\n",
+    "            return \"Draw!\"\n",
+    "        return \"You Lose!\"\n",
+    "    else:\n",
+    "        return \"Draw!\"\n",
+    "\n",
+    "    \n",
+    "print(briscola_score(\n",
+    "  [\"3c\", \"3s\", \"Qd\", \"Jh\", \"5d\", \"Jc\", \"6d\", \"Ad\", \"Js\", \"Qc\"],\n",
+    "  [\"Jd\", \"Kd\", \"4c\", \"6s\", \"Ks\", \"5c\", \"3d\", \"As\", \"Jh\", \"6h\"]\n",
+    "))\n",
+    "print(briscola_score(\n",
+    "  [\"Ac\", \"As\", \"3d\", \"3h\", \"3s\", \"Ah\", \"Kd\"],\n",
+    "  [\"3d\", \"Ad\", \"Ac\", \"As\", \"Ah\"]\n",
+    ") )\n",
+    "print(briscola_score(\n",
+    "  [\"Ac\", \"As\", \"3d\", \"3h\", \"3s\", \"Ah\", \"Kd\"],\n",
+    "  [\"3d\", \"Ad\", \"Ac\", \"As\", \"3h\"]\n",
+    "))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fe83d6af",
+   "metadata": {},
+   "source": [
+    "## **3: Pricey Products**\n",
+    "\n",
+    "You will be given a dictionary with various products and their respective prices. Return a list of the products with a minimum price of 500 in descending order.\n",
+    "\n",
+    "### **Examples**\n",
+    "\n",
+    "```\n",
+    "pricey_prod({\"Computer\" : 600, \"TV\" : 800, \"Radio\" : 50}) ➞ [\"TV\", \"Computer\"]\n",
+    "\n",
+    "pricey_prod({\"Bike1\" : 510, \"Bike2\" : 401, \"Bike3\" : 501}) ➞ [\"Bike1\", \"Bike3\"]\n",
+    "\n",
+    "pricey_prod({\"Loafers\" : 50, \"Vans\" : 10, \"Crocs\" : 20}) ➞ []\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "4b6e63a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['TV', 'Computer']\n",
+      "['Bike1', 'Bike3']\n",
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def pricey_prod(products: dict) -> list:\n",
+    "    filtered = []\n",
+    "    for item, price in products.items():\n",
+    "        if price >= 500:\n",
+    "            filtered.append((item, price))\n",
+    "            \n",
+    "    filtered.sort(key=lambda x: x[1], reverse=True)\n",
+    "    result = []\n",
+    "    for item, _ in filtered:\n",
+    "        result.append(item)\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "print(pricey_prod({\"Computer\" : 600, \"TV\" : 800, \"Radio\" : 50}))\n",
+    "print(pricey_prod({\"Bike1\" : 510, \"Bike2\" : 401, \"Bike3\" : 501}))\n",
+    "print(pricey_prod({\"Loafers\" : 50, \"Vans\" : 10, \"Crocs\" : 20}))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cb66d47f",
+   "metadata": {},
+   "source": [
+    "## **4: The List Twins**\n",
+    "\n",
+    "Create a function that given a list, it returns the index where if split in two-subarrays (last element of the first array has index of (foundIndex-1)), the sum of them are equal.\n",
+    "\n",
+    "### **Examples**\n",
+    "\n",
+    "```\n",
+    "twins([10, 20, 30, 5, 40, 50, 40, 15]) ➞ 5\n",
+    "# foundIndex 5 : [10+20+30+5+40]=[50+40+15]\n",
+    "\n",
+    "twins([1, 2, 3, 4, 5, 5]) ➞ 4\n",
+    "# [1, 2, 3, 4] [5, 5]\n",
+    "\n",
+    "twins([3, 3]) ➞ 1\n",
+    "```\n",
+    "\n",
+    "### **Notes**\n",
+    "\n",
+    "Return only the foundIndex, not the divided list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af7f8dc1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "105 105\n",
+      "5\n",
+      "10 10\n",
+      "4\n",
+      "3 3\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "def twins(numbers: list) -> int:\n",
+    "    left_sum = 0\n",
+    "    right_sum = 0\n",
+    "    left_index = 0\n",
+    "    right_index = len(numbers) - 1\n",
+    "\n",
+    "    while left_index <= right_index:\n",
+    "        if left_sum <= right_sum:\n",
+    "            left_sum += numbers[left_index]\n",
+    "            left_index += 1\n",
+    "        else: \n",
+    "            right_sum += numbers[right_index]\n",
+    "            right_index -= 1\n",
+    "\n",
+    "    print(right_sum, left_sum)\n",
+    "    return left_index\n",
+    "\n",
+    "print(twins([10, 20, 30, 5, 40, 50, 40, 15]))  # ➞ 5\n",
+    "print(twins([1, 2, 3, 4, 5, 5]))                # ➞ 4\n",
+    "print(twins([3, 3]))                            # ➞ 1\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a518356c",
+   "metadata": {},
+   "source": [
+    "## **5:Reverse a Linked List**\n",
+    "\n",
+    "Given a linked list class, implement a method called `reverse()` that reverses the linked list.\n",
+    "\n",
+    "### **Examples**\n",
+    "\n",
+    "```\n",
+    "Input: 10 -> 20 -> 30 -> 40 -> None\n",
+    "\n",
+    "Output: 40 -> 30 -> 20 -> 10 -> None\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fe3ad9b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import Optional, List\n",
+    "\n",
+    "class Node:\n",
+    "    def __init__(self, data: int):\n",
+    "        self.data: int = data\n",
+    "        self.next: Optional['Node'] = None\n",
+    "\n",
+    "class LinkedList:\n",
+    "    def __init__(self):\n",
+    "        self.head: Optional[Node] = None\n",
+    "        self.tail: Optional[Node] = None\n",
+    "\n",
+    "    def insert(self, data: int) -> None:\n",
+    "        new_node = Node(data)\n",
+    "\n",
+    "        if self.head is None:\n",
+    "            self.head = self.tail = new_node\n",
+    "        else:\n",
+    "            tail = self.tail\n",
+    "            if tail is not None:\n",
+    "                tail.next = new_node\n",
+    "                self.tail = new_node\n",
+    "\n",
+    "    def traverse(self) -> List[int]:\n",
+    "        result: List[int] = []\n",
+    "        current = self.head\n",
+    "\n",
+    "        while current is not None:\n",
+    "            result.append(current.data)\n",
+    "            current = current.next\n",
+    "\n",
+    "        return result\n",
+    "\n",
+    "    def reverse(self) -> None:\n",
+    "        prev = None\n",
+    "        curr = self.head\n",
+    "\n",
+    "        while curr:\n",
+    "            next_node = curr.next       # Save the next node\n",
+    "            curr.next = prev            # Reverse the link\n",
+    "            prev = curr                 # Move prev forward\n",
+    "            curr = next_node            # Move curr forward\n",
+    "            \n",
+    "\n",
+    "        self.tail = self.head           # Original head becomes new tail\n",
+    "        self.head = prev               # prev is new head after full reverse\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "008a13b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Traverse: [10, 20, 30, 40]\n",
+      "Traverse after reverse: [40, 30, 20, 10]\n",
+      "Empty traverse: []\n",
+      "Single element traverse: [5]\n",
+      "Single element traverse after reverse: [5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "ll = LinkedList()\n",
+    "\n",
+    "# Insert some elements\n",
+    "ll.insert(10)\n",
+    "ll.insert(20)\n",
+    "ll.insert(30)\n",
+    "ll.insert(40)\n",
+    "\n",
+    "# Test traverse (should print [10, 20, 30, 40])\n",
+    "print(\"Traverse:\", ll.traverse())\n",
+    "\n",
+    "# Test reverse (after implementing reverse method)\n",
+    "ll.reverse()\n",
+    "# Should print [40, 30, 20, 10] after reversing\n",
+    "print(\"Traverse after reverse:\", ll.traverse())\n",
+    "\n",
+    "# Test empty list\n",
+    "empty_ll = LinkedList()\n",
+    "print(\"Empty traverse:\", empty_ll.traverse())  # Should print []\n",
+    "\n",
+    "# Test single element\n",
+    "single_ll = LinkedList()\n",
+    "single_ll.insert(5)\n",
+    "print(\"Single element traverse:\", single_ll.traverse())  # Should print [5]\n",
+    "single_ll.reverse()\n",
+    "print(\"Single element traverse after reverse:\", single_ll.traverse())  # Should print [5]"
+   ]
   }
  ],
  "metadata": {
@@ -46,7 +493,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.13.5"
   }
  },
