--- a/problems/05.ipynb
+++ b/problems/05.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "46a08fe7",
    "metadata": {},
    "outputs": [
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "af7f8dc1",
    "metadata": {},
    "outputs": [
@@ -484,6 +484,535 @@
     "single_ll.reverse()\n",
     "print(\"Single element traverse after reverse:\", single_ll.traverse())  # Should print [5]"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f875110e",
+   "metadata": {},
+   "source": [
+    "### [**6: Add Two Numbers**](https://leetcode.com/problems/add-two-numbers/)\n",
+    "\n",
+    "You are given two **non-empty** linked lists representing two non-negative integers. The digits are stored in **reverse order**, and each of their nodes contains a single digit. Add the two numbers and return the sum as a linked list.\n",
+    "\n",
+    "You may assume the two numbers do not contain any leading zero, except the number 0 itself.\n",
+    "\n",
+    " \n",
+    "\n",
+    "**Example 1:**\n",
+    "\n",
+    "```\n",
+    "Input: l1 = [2,4,3], l2 = [5,6,4]\n",
+    "Output: [7,0,8]\n",
+    "Explanation: 342 + 465 = 807.\n",
+    "```\n",
+    "\n",
+    "**Example 2:**\n",
+    "\n",
+    "```\n",
+    "Input: l1 = [0], l2 = [0]\n",
+    "Output: [0]\n",
+    "```\n",
+    "\n",
+    "**Example 3:**\n",
+    "\n",
+    "```\n",
+    "Input: l1 = [9,9,9,9,9,9,9], l2 = [9,9,9,9]\n",
+    "Output: [8,9,9,9,0,0,0,1]\n",
+    "```\n",
+    "\n",
+    " \n",
+    "\n",
+    "**Constraints:**\n",
+    "\n",
+    "- The number of nodes in each linked list is in the range `[1, 100]`.\n",
+    "- `0 <= Node.val <= 9`\n",
+    "- It is guaranteed that the list represents a number that does not have leading zeros."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "641008f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import Optional\n",
+    "\n",
+    "class ListNode:\n",
+    "    def __init__(self, val: int = 0, next: 'Optional[ListNode]' = None):\n",
+    "        self.val = val\n",
+    "        self.next = next\n",
+    "\n",
+    "def addTwoNumbers(l1: Optional[ListNode], l2: Optional[ListNode]) -> Optional[ListNode]:\n",
+    "    dummy_head = ListNode()\n",
+    "    current = dummy_head\n",
+    "    carry = 0\n",
+    "\n",
+    "    while l1 or l2 or carry:\n",
+    "        # Extract values\n",
+    "        val1 = l1.val if l1 else 0\n",
+    "        val2 = l2.val if l2 else 0\n",
+    "\n",
+    "        # Add digits and carry\n",
+    "        total = val1 + val2 + carry\n",
+    "        carry = total // 10\n",
+    "        digit = total % 10\n",
+    "        \n",
+    "        # Append result node\n",
+    "        current.next = ListNode(digit)\n",
+    "        current = current.next\n",
+    "        \n",
+    "        # Move pointers\n",
+    "        if l1:\n",
+    "            l1 = l1.next\n",
+    "        if l2:\n",
+    "            l2 = l2.next\n",
+    "\n",
+    "    return dummy_head.next\n",
+    "\n",
+    "\n",
+    "def list_to_linked(lst):\n",
+    "    dummy = ListNode()\n",
+    "    current = dummy\n",
+    "    for num in lst:\n",
+    "        current.next = ListNode(num)\n",
+    "        current = current.next\n",
+    "    return dummy.next\n",
+    "\n",
+    "def print_linked_list(node):\n",
+    "    while node:\n",
+    "        print(node.val, end=\" -> \" if node.next else \"\\n\")\n",
+    "        node = node.next\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "135431af",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7 -> 0 -> 8\n",
+      "8 -> 9 -> 9 -> 9 -> 0 -> 0 -> 0 -> 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "l1 = list_to_linked([2, 4, 3])  # 342\n",
+    "l2 = list_to_linked([5, 6, 4])  # 465\n",
+    "\n",
+    "result = addTwoNumbers(l1, l2)  # 807 → [7, 0, 8]\n",
+    "print_linked_list(result)\n",
+    "\n",
+    "l1 = list_to_linked([9,9,9,9,9,9,9])\n",
+    "l2 = list_to_linked([9,9,9,9])\n",
+    "\n",
+    "result = addTwoNumbers(l1, l2)  # 10009998 [8,9,9,9,0,0,0,1]\n",
+    "print_linked_list(result)\n",
+    "\n",
+    "#9,9,9,9,9,9,9,0 l1\n",
+    "#9,9,9,9,0,0,0,0 l2 \n",
+    "#8,9,9,9,0,0,0,1 sum "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a9aa0383",
+   "metadata": {},
+   "source": [
+    "### [**7: Longest Substring Without Repeating Characters**](https://leetcode.com/problems/longest-substring-without-repeating-characters/)\n",
+    "\n",
+    "Given a string `s`, find the length of the **longest** **substring** without duplicate characters. \n",
+    "\n",
+    "**Example 1:**\n",
+    "\n",
+    "```\n",
+    "Input: s = \"abcabcbb\"\n",
+    "Output: 3\n",
+    "Explanation: The answer is \"abc\", with the length of 3.\n",
+    "```\n",
+    "\n",
+    "**Example 2:**\n",
+    "\n",
+    "```\n",
+    "Input: s = \"bbbbb\"\n",
+    "Output: 1\n",
+    "Explanation: The answer is \"b\", with the length of 1.\n",
+    "```\n",
+    "\n",
+    "**Example 3:**\n",
+    "\n",
+    "```\n",
+    "Input: s = \"pwwkew\"\n",
+    "Output: 3\n",
+    "Explanation: The answer is \"wke\", with the length of 3.\n",
+    "Notice that the answer must be a substring, \"pwke\" is a subsequence and not a substring.\n",
+    "```\n",
+    "\n",
+    " \n",
+    "\n",
+    "**Constraints:**\n",
+    "\n",
+    "- `0 <= s.length <= 5 * 104`\n",
+    "- `s` consists of English letters, digits, symbols and spaces."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "529330b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def lengthOfLongestSubstring1(self, s: str) -> int:\n",
+    "        result = \"\"\n",
+    "        max_result = 0 \n",
+    "        for char in s :\n",
+    "            if char in result:\n",
+    "                index = result.index(char)\n",
+    "                result = result[index +1 :]   \n",
+    "            result +=char\n",
+    "            max_result = max(max_result , len(result))\n",
+    "        return max_result\n",
+    "# better speed  \n",
+    "    def lengthOfLongestSubstring(self, s: str) -> int:\n",
+    "        last_index = {}\n",
+    "        start = 0\n",
+    "        max_len = 0\n",
+    "        n = len(s)\n",
+    "        for i in range(n):\n",
+    "            ch = s[i]\n",
+    "            if ch in last_index and last_index[ch] >= start:\n",
+    "                start = last_index[ch] + 1\n",
+    "            last_index[ch] = i\n",
+    "            current_len = i - start + 1\n",
+    "            if current_len > max_len:\n",
+    "                max_len = current_len\n",
+    "        return max_len\n",
+    "\n",
+    "solution = Solution()\n",
+    "print(solution.lengthOfLongestSubstring(\"abcabcbb\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "15f36484",
+   "metadata": {},
+   "source": [
+    "### [**8:  Reverse Integer**](https://leetcode.com/problems/reverse-integer/)\n",
+    "\n",
+    "Given a signed 32-bit integer `x`, return `x` *with its digits reversed*. If reversing `x` causes the value to go outside the signed 32-bit integer range `[-231, 231 - 1]`, then return `0`.\n",
+    "\n",
+    "**Assume the environment does not allow you to store 64-bit integers (signed or unsigned).**\n",
+    "\n",
+    "**Example 1:**\n",
+    "\n",
+    "```\n",
+    "Input: x = 123\n",
+    "Output: 321\n",
+    "```\n",
+    "\n",
+    "**Example 2:**\n",
+    "\n",
+    "```\n",
+    "Input: x = -123\n",
+    "Output: -321\n",
+    "```\n",
+    "\n",
+    "**Example 3:**\n",
+    "\n",
+    "```\n",
+    "Input: x = 120\n",
+    "Output: 21\n",
+    "```\n",
+    "\n",
+    "**Constraints:**\n",
+    "\n",
+    "- `-231 <= x <= 231 - 1`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "a3bce6bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "321\n",
+      "-321\n"
+     ]
+    }
+   ],
+   "source": [
+    "def reverse_integer(x : int) -> int:\n",
+    "    is_negative = False \n",
+    "    result = 0\n",
+    "    if x < 0 : \n",
+    "        is_negative = True \n",
+    "        x = abs(x)\n",
+    "    \n",
+    "    while x != 0 :\n",
+    "        digit = x % 10\n",
+    "        x = x // 10 \n",
+    "        \n",
+    "        if result > (2**31 - 1) // 10:\n",
+    "            return 0\n",
+    "        \n",
+    "        result = result * 10 + digit\n",
+    "        \n",
+    "    return -result if is_negative else result\n",
+    "\n",
+    "print(reverse_integer(123))\n",
+    "print(reverse_integer(-123))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "10ac0e15",
+   "metadata": {},
+   "source": [
+    "### [**9: Longest Palindromic Substring**](https://leetcode.com/problems/longest-palindromic-substring/)\n",
+    "\n",
+    "Given a string `s`, return *the longest* *palindromic* *substring* in `s`.\n",
+    "\n",
+    " **Example 1:**\n",
+    "\n",
+    "```\n",
+    "Input: s = \"babad\"\n",
+    "Output: \"bab\"\n",
+    "Explanation: \"aba\" is also a valid answer.\n",
+    "```\n",
+    "\n",
+    "**Example 2:**\n",
+    "\n",
+    "```\n",
+    "Input: s = \"cbbd\"\n",
+    "Output: \"bb\"\n",
+    " \n",
+    "```\n",
+    "\n",
+    "**Constraints:**\n",
+    "\n",
+    "- `1 <= s.length <= 1000`\n",
+    "- `s` consist of only digits and English letters."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "81e73ecc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bab\n",
+      "bb\n",
+      "aca\n"
+     ]
+    }
+   ],
+   "source": [
+    "# its okey but slow 8263 ms \n",
+    "def longestPalindrome1(s : str) ->str :\n",
+    "    def is_palindrome(sub : str)-> bool :\n",
+    "        return True if sub == sub[::-1] else False \n",
+    "    l = len(s)\n",
+    "    longest_sub = \"\"\n",
+    "    for i in range(l):\n",
+    "        char_to_find = s[i]\n",
+    "        last_index = s.rfind(char_to_find)\n",
+    "        for end in range(last_index, i - 1, -1):\n",
+    "            sub = s[i:end + 1]\n",
+    "            if is_palindrome(sub) and len(sub) > len(longest_sub):\n",
+    "                longest_sub = sub\n",
+    "                break  \n",
+    "\n",
+    "    return longest_sub\n",
+    "\n",
+    "# way faster approach 255ms \n",
+    "from typing import Tuple\n",
+    "def longestPalindrome(s: str) -> str:\n",
+    "    if not s:\n",
+    "        return \"\"\n",
+    "\n",
+    "    start, max_len = 0, 1\n",
+    "\n",
+    "    def expand(left: int, right: int) -> Tuple[int,int]:\n",
+    "        while left >= 0 and right < len(s) and s[left] == s[right]:\n",
+    "            left -= 1\n",
+    "            right += 1\n",
+    "        # Return start index and length of palindrome\n",
+    "        return left + 1, right - left - 1\n",
+    "\n",
+    "    for i in range(len(s)):\n",
+    "        # Odd length palindrome\n",
+    "        left1, len1 = expand(i, i)\n",
+    "        # Even length palindrome\n",
+    "        left2, len2 = expand(i, i + 1)\n",
+    "\n",
+    "        if len1 > max_len:\n",
+    "            start, max_len = left1, len1\n",
+    "        if len2 > max_len:\n",
+    "            start, max_len = left2, len2\n",
+    "\n",
+    "    return s[start:start + max_len]\n",
+    "\n",
+    "print(longestPalindrome(\"babad\"))          # \"bab\" or \"aba\"\n",
+    "print(longestPalindrome(\"cbbd\"))           # \"bb\"\n",
+    "print(longestPalindrome(\"aacabdkacaa\"))    # \"aca\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9ff93ce4",
+   "metadata": {},
+   "source": [
+    "### 10: [**Integer to Roman**](https://leetcode.com/problems/integer-to-roman/)\n",
+    "\n",
+    "Seven different symbols represent Roman numerals with the following values:\n",
+    "\n",
+    "I 1 V 5 X 10 L 50 C 100 D 500 M 1000\n",
+    "\n",
+    "Roman numerals are formed by appending the conversions of decimal place values from highest to lowest. Converting a decimal place value into a Roman numeral has the following rules:\n",
+    "\n",
+    "- If the value does not start with 4 or 9, select the symbol of the maximal value that can be subtracted from the input, append that symbol to the result, subtract its value, and convert the remainder to a Roman numeral.\n",
+    "- If the value starts with 4 or 9 use the **subtractive form** representing one symbol subtracted from the following symbol, for example, 4 is 1 (`I`) less than 5 (`V`): `IV` and 9 is 1 (`I`) less than 10 (`X`): `IX`. Only the following subtractive forms are used: 4 (`IV`), 9 (`IX`), 40 (`XL`), 90 (`XC`), 400 (`CD`) and 900 (`CM`).\n",
+    "- Only powers of 10 (`I`, `X`, `C`, `M`) can be appended consecutively at most 3 times to represent multiples of 10. You cannot append 5 (`V`), 50 (`L`), or 500 (`D`) multiple times. If you need to append a symbol 4 times use the **subtractive form**.\n",
+    "\n",
+    "Given an integer, convert it to a Roman numeral.\n",
+    "\n",
+    "**Example 1:**\n",
+    "\n",
+    "**Input:** num = 3749\n",
+    "\n",
+    "**Output:** \"MMMDCCXLIX\"\n",
+    "\n",
+    "**Explanation:**\n",
+    "\n",
+    "```\n",
+    "3000 = MMM as 1000 (M) + 1000 (M) + 1000 (M)\n",
+    " 700 = DCC as 500 (D) + 100 (C) + 100 (C)\n",
+    "  40 = XL as 10 (X) less of 50 (L)\n",
+    "   9 = IX as 1 (I) less of 10 (X)\n",
+    "Note: 49 is not 1 (I) less of 50 (L) because the conversion is based on decimal places\n",
+    "```\n",
+    "\n",
+    "**Example 2:**\n",
+    "\n",
+    "**Input:** num = 58\n",
+    "\n",
+    "**Output:** \"LVIII\"\n",
+    "\n",
+    "**Explanation:**\n",
+    "\n",
+    "```\n",
+    "50 = L\n",
+    " 8 = VIII\n",
+    "```\n",
+    "\n",
+    "**Example 3:**\n",
+    "\n",
+    "**Input:** num = 1994\n",
+    "\n",
+    "**Output:** \"MCMXCIV\"\n",
+    "\n",
+    "**Explanation:**\n",
+    "\n",
+    "```\n",
+    "1000 = M\n",
+    " 900 = CM\n",
+    "  90 = XC\n",
+    "   4 = IV\n",
+    "```\n",
+    "\n",
+    " **Constraints:**\n",
+    "\n",
+    "- `1 <= num <= 3999`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a5fa5529",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MMMDCCXLIX\n",
+      "LVIII\n",
+      "MCMXCIV\n"
+     ]
+    }
+   ],
+   "source": [
+    "def intToRoman(num: int) -> str:\n",
+    "    value_map = [\n",
+    "        (1000, \"M\"),\n",
+    "        (900, \"CM\"),\n",
+    "        (500, \"D\"),\n",
+    "        (400, \"CD\"),\n",
+    "        (100, \"C\"),\n",
+    "        (90, \"XC\"),\n",
+    "        (50, \"L\"),\n",
+    "        (40, \"XL\"),\n",
+    "        (10, \"X\"),\n",
+    "        (9, \"IX\"),\n",
+    "        (5, \"V\"),\n",
+    "        (4, \"IV\"),\n",
+    "        (1, \"I\"),\n",
+    "    ]\n",
+    "    \n",
+    "    result = \"\"\n",
+    "    \n",
+    "    for value, symbol in value_map:\n",
+    "        while num >= value:\n",
+    "            result += symbol\n",
+    "            num -= value\n",
+    "        if num == 0:\n",
+    "            break  # no need to continue once fully converted\n",
+    "    \n",
+    "    return result\n",
+    "\n",
+    "# Test examples\n",
+    "print(intToRoman(3749))  # \"MMMDCCXLIX\"\n",
+    "print(intToRoman(58))    # \"LVIII\"\n",
+    "print(intToRoman(1994))  # \"MCMXCIV\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "510f1aeb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ba75d139",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
