--- a/problems/06.ipynb
+++ b/problems/06.ipynb
@@ -4,12 +4,412 @@
    "cell_type": "markdown",
    "id": "7e08d8de",
    "metadata": {},
+   "source": [
+    "### **1:[ Longest Consecutive Sequence](https://leetcode.com/problems/longest-consecutive-sequence/)**\n",
+    "\n",
+    "Given an unsorted array of integers `nums`, return *the length of the longest consecutive elements sequence.*\n",
+    "\n",
+    "You must write an algorithm that runs in `O(n)` time.\n",
+    "\n",
+    " \n",
+    "\n",
+    "**Example 1:**\n",
+    "\n",
+    "```\n",
+    "Input: nums = [100,4,200,1,3,2]\n",
+    "Output: 4\n",
+    "Explanation: The longest consecutive elements sequence is [1, 2, 3, 4]. Therefore its length is 4.\n",
+    "```\n",
+    "\n",
+    "**Example 2:**\n",
+    "\n",
+    "```\n",
+    "Input: nums = [0,3,7,2,5,8,4,6,0,1]\n",
+    "Output: 9\n",
+    "```\n",
+    "\n",
+    "**Example 3:**\n",
+    "\n",
+    "```\n",
+    "Input: nums = [1,0,1,2]\n",
+    "Output: 3\n",
+    "```\n",
+    "\n",
+    " \n",
+    "\n",
+    "**Constraints:**\n",
+    "\n",
+    "- `0 <= nums.length <= 105`\n",
+    "- `-109 <= nums[i] <= 109`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "dbffe11b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "37\n"
+     ]
+    }
+   ],
+   "source": [
+    "def longestConsecutive(nums: list[int]) -> int:\n",
+    "        num_set = set(nums)\n",
+    "        longest_streak = 0\n",
+    "        streak= 0 \n",
+    "        \n",
+    "        for num in num_set :\n",
+    "            if num-1 in num_set: \n",
+    "                search_num  = num-1 \n",
+    "                while search_num in num_set : \n",
+    "                    streak+=1\n",
+    "                    search_num -= 1 \n",
+    "                if streak > longest_streak : \n",
+    "                    longest_streak = streak\n",
+    "            else: \n",
+    "                streak = 0 \n",
+    "        \n",
+    "        \n",
+    "        return longest_streak+1 \n",
+    "    \n",
+    "\n",
+    "print(longestConsecutive([0,3,7,2,5,8,4,6,0,1]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a8560b82",
+   "metadata": {},
+   "source": [
+    "### [**2: Valid Parentheses**](https://leetcode.com/problems/valid-parentheses/) \n",
+    "\n",
+    "Given a string `s` containing just the characters `'('`, `')'`, `'{'`, `'}'`, `'['` and `']'`, determine if the input string is valid.\n",
+    "\n",
+    "An input string is valid if:\n",
+    "\n",
+    "1. Open brackets must be closed by the same type of brackets.\n",
+    "2. Open brackets must be closed in the correct order.\n",
+    "3. Every close bracket has a corresponding open bracket of the same type.\n",
+    "\n",
+    " \n",
+    "\n",
+    "**Example 1:**\n",
+    "\n",
+    "**Input:** s = \"()\"\n",
+    "\n",
+    "**Output:** true\n",
+    "\n",
+    "**Example 2:**\n",
+    "\n",
+    "**Input:** s = \"()\\[\\]{}\"\n",
+    "\n",
+    "**Output:** true\n",
+    "\n",
+    "**Example 3:**\n",
+    "\n",
+    "**Input:** s = \"(\\]\"\n",
+    "\n",
+    "**Output:** false\n",
+    "\n",
+    "**Example 4:**\n",
+    "\n",
+    "**Input:** s = \"(\\[\\])\"\n",
+    "\n",
+    "**Output:** true\n",
+    "\n",
+    "**Example 5:**\n",
+    "\n",
+    "**Input:** s = \"(\\[)\\]\"\n",
+    "\n",
+    "**Output:** false\n",
+    "\n",
+    " \n",
+    "\n",
+    "**Constraints:**\n",
+    "\n",
+    "- `1 <= s.length <= 104`\n",
+    "- `s` consists of parentheses only `'()[]{}'`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "bb196b20",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ") )\n",
+      "] ]\n",
+      "} }\n",
+      "True\n",
+      ") ]\n",
+      "False\n",
+      "] ]\n",
+      ") )\n",
+      "True\n",
+      "] )\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "from queue import LifoQueue\n",
+    "\n",
+    "def isValid(s : str)->bool: \n",
+    "    \n",
+    "    stack = []\n",
+    "    \n",
+    "    brackets = {\n",
+    "        \"(\":\")\",\n",
+    "        \"[\":\"]\",\n",
+    "        \"{\":\"}\"\n",
+    "    }\n",
+    "    for bracket in s :\n",
+    "        if bracket in brackets: \n",
+    "            stack.append(bracket)\n",
+    "            \n",
+    "        else :\n",
+    "            if not stack:\n",
+    "                return False\n",
+    "            stack_element = stack.pop()\n",
+    "            \n",
+    "            print ( brackets[stack_element] , bracket)\n",
+    "            if bracket != brackets[stack_element] :\n",
+    "                return False\n",
+    "        \n",
+    "    return True and not stack \n",
+    "\n",
+    "print(isValid(\"()[]{}\"))\n",
+    "print(isValid(\"(]\"))\n",
+    "print(isValid(\"([])\"))\n",
+    "print(isValid(\"([)]\"))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "15d9371a",
+   "metadata": {},
+   "source": [
+    "### 3: [**Merge Two Sorted Lists**](https://leetcode.com/problems/merge-two-sorted-lists/)\n",
+    "\n",
+    "You are given the heads of two sorted linked lists `list1` and `list2`.\n",
+    "\n",
+    "Merge the two lists into one **sorted** list. The list should be made by splicing together the nodes of the first two lists.\n",
+    "\n",
+    "Return *the head of the merged linked list*.\n",
+    "\n",
+    " \n",
+    "\n",
+    "**Example 1:**\n",
+    "\n",
+    "```\n",
+    "Input: list1 = [1,2,4], list2 = [1,3,4]\n",
+    "Output: [1,1,2,3,4,4]\n",
+    "```\n",
+    "\n",
+    "**Example 2:**\n",
+    "\n",
+    "```\n",
+    "Input: list1 = [], list2 = []\n",
+    "Output: []\n",
+    "```\n",
+    "\n",
+    "**Example 3:**\n",
+    "\n",
+    "```\n",
+    "Input: list1 = [], list2 = [0]\n",
+    "Output: [0]\n",
+    "```\n",
+    "\n",
+    " \n",
+    "\n",
+    "**Constraints:**\n",
+    "\n",
+    "- The number of nodes in both lists is in the range `[0, 50]`.\n",
+    "- `-100 <= Node.val <= 100`\n",
+    "- Both `list1` and `list2` are sorted in **non-decreasing** order."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "3347a70c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "from typing import Optional\n",
+    "\n",
+    "class ListNode:\n",
+    "    def __init__(self, val: int = 0, next: Optional['ListNode'] = None):\n",
+    "        self.val = val\n",
+    "        self.next = next\n",
+    "\n",
+    "class Solution:\n",
+    "    def mergeTwoLists(self, list1: Optional[ListNode], list2: Optional[ListNode]) -> Optional[ListNode]:\n",
+    "        dummy = ListNode(-1)\n",
+    "        current = dummy        \n",
+    "        while list1 and list2:\n",
+    "            if list1.val  < list2.val:\n",
+    "                current.next = list1\n",
+    "                list1 = list1.next \n",
+    "            else :\n",
+    "                current.next = list2\n",
+    "                list2 = list2.next\n",
+    "                 \n",
+    "            current = current.next\n",
+    "            \n",
+    "        current.next = list1 if list1 else list2   \n",
+    "        \n",
+    "        return dummy.next"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "db298cb2",
+   "metadata": {},
+   "source": [
+    "### 4: [**Climbing Stairs**](https://leetcode.com/problems/climbing-stairs/)\n",
+    "\n",
+    "You are climbing a staircase. It takes `n` steps to reach the top.\n",
+    "\n",
+    "Each time you can either climb `1` or `2` steps. In how many distinct ways can you climb to the top?\n",
+    "\n",
+    " \n",
+    "\n",
+    "**Example 1:**\n",
+    "\n",
+    "```\n",
+    "Input: n = 2\n",
+    "Output: 2\n",
+    "Explanation: There are two ways to climb to the top.\n",
+    "1. 1 step + 1 step\n",
+    "2. 2 steps\n",
+    "```\n",
+    "\n",
+    "**Example 2:**\n",
+    "\n",
+    "```\n",
+    "Input: n = 3\n",
+    "Output: 3\n",
+    "Explanation: There are three ways to climb to the top.\n",
+    "1. 1 step + 1 step + 1 step\n",
+    "2. 1 step + 2 steps\n",
+    "3. 2 steps + 1 step\n",
+    "```\n",
+    "\n",
+    " \n",
+    "\n",
+    "**Constraints:**\n",
+    "\n",
+    "- `1 <= n <= 45`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82743825",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def climbStairs(n: int) -> int:\n",
+    "    def fibo(n):\n",
+    "        a, b , initial = 1 , 2 , 1 \n",
+    "        while initial < n-1 : \n",
+    "            a += b\n",
+    "            b += a \n",
+    "            initial +=2 \n",
+    "        \n",
+    "        return a, b\n",
+    "    \n",
+    "    odd , even = fibo(n)\n",
+    "    \n",
+    "    return even if n %2 == 0 else odd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e8a51bcf",
+   "metadata": {},
+   "source": [
+    "### **5:[ Same Tree](https://leetcode.com/problems/same-tree/)**\n",
+    "\n",
+    "Given the roots of two binary trees `p` and `q`, write a function to check if they are the same or not.\n",
+    "\n",
+    "Two binary trees are considered the same if they are structurally identical, and the nodes have the same value. \n",
+    "\n",
+    "**Example 1:**\n",
+    "\n",
+    "```\n",
+    "Input: p = [1,2,3], q = [1,2,3]\n",
+    "Output: true\n",
+    "```\n",
+    "\n",
+    "**Example 2:**\n",
+    "\n",
+    "```\n",
+    "Input: p = [1,2], q = [1,null,2]\n",
+    "Output: false\n",
+    "```\n",
+    "\n",
+    "**Example 3:**\n",
+    "\n",
+    "```\n",
+    "Input: p = [1,2,1], q = [1,1,2]\n",
+    "Output: false\n",
+    "```\n",
+    "\n",
+    "**Constraints:**\n",
+    "\n",
+    "- The number of nodes in both trees is in the range `[0, 100]`.\n",
+    "- `-104 <= Node.val <= 104`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8533cc29",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "env",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
